dark mode fix to dialog secondary button, multiselect

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -132,11 +132,17 @@
   }
 }
 
-.dark .mdc-button:not(.mdc-ripple-upgraded).mdc-button--outlined {
-  background-color: white !important;
-  border: 1px solid $light-gray !important;
+.dark .mdc-dialog {
+  .mdc-button:not(.mdc-ripple-upgraded).mdc-button--outlined {
+    background-color: white !important;
+    border: 1px solid $light-gray !important;
 
-  .mdc-button__label {
-    color: $gray;
+    &:active, &:hover {
+      background-color: $very-light-gray;
+    }
+
+    .mdc-button__label {
+      color: $gray;
+    }
   }
 }
